update tmux removed bug

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -20,9 +20,11 @@ set-window-option -g window-status-bell-fg red
 set -g allow-rename off
 set -g automatic-rename off
 
+#set -g default-terminal "gnome-terminal"
+
 bind -n S-down new-window
 bind -n S-left prev
 bind -n S-right next
 bind -n C-left swap-window -t -1
 bind -n C-right swap-window -t +1
-# vim: ft=tmux
+ #vim: ft=tmux
