--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -1,5 +1,11 @@
+# bind prefix to useful key
 unbind C-b
 set -g prefix C-a
+bind-key a send-prefix
+
+bind-key | resize-pane -Z \; display-message "Zooming in..."
+
+# make tmux nice
 set -g status on
 set -g status-utf8 on
 set -g status-interval 2
@@ -22,9 +28,23 @@ set -g automatic-rename off
 
 #set -g default-terminal "gnome-terminal"
 
+# easy window swapping
 bind -n S-down new-window
 bind -n S-left prev
 bind -n S-right next
 bind -n C-left swap-window -t -1
 bind -n C-right swap-window -t +1
+
+# vim keys for moving
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
+
+# VIM support
+set -sg escape-time 0
+set -g aggressive-resize on
+
+# session saver
+bind S command-prompt -p "Make/attach session:" "new-window 'tmuxstart \'%%\''"
  #vim: ft=tmux
