--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vim/vim_dir/bundle/vundle"]
 	path = vim/vim_dir/bundle/vundle
 	url = https://github.com/gmarik/vundle.git
+[submodule "awesome/lain"]
+	path = awesome/lain
+	url = https://github.com/copycat-killer/lain.git
