--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -36,10 +36,10 @@ bind -n C-left swap-window -t -1
 bind -n C-right swap-window -t +1
 
 # vim keys for moving
-bind -n C-h select-pane -L
-bind -n C-j select-pane -D
-bind -n C-k select-pane -U
-bind -n C-l select-pane -R
+#bind -n C-h select-pane -L
+#bind -n C-j select-pane -D
+#bind -n C-k select-pane -U
+#bind -n C-l select-pane -R
 
 # VIM support
 set -sg escape-time 0
