changed move bindings

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -33,8 +33,9 @@ set -g automatic-rename off
 
 # easy window swapping
 bind -n S-down new-window
-bind -n S-left prev
-bind -n S-right next
+bind -n M-down new-window
+bind -n M-left prev
+bind -n M-right next
 bind -n C-left swap-window -t -1
 bind -n C-right swap-window -t +1
 
