added system load to tmux config

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -140,6 +140,10 @@ bind -n M-down new-window
 set -g allow-rename off
 set -g automatic-rename off
 
+# add system load to tmux powerline
+set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
+#set -g status-right 60
+
 
 # VIM support
 set -sg escape-time 0
