--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -73,7 +73,7 @@ set-option -g status-interval 2
 # set-option -g status-right-length 90
 # set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
 # set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]][#[default]'
-set-option -g status-right ""
+#set-option -g status-right ""
 # set -g window-status-current-format "#[fg=$clGrey,bg=colour31]#[fg=colour117,bg=colour31] #[fg=clTxt,bold]#W #[fg=colour31,bg=$clGrey,nobold]"
 # set -g window-status-current-format "#[fg=$clGrey,bg=$clA]#[fg=$clTxt,bg=$clA] #[fg=clTxt,bold]#T #[fg=$clA,bg=$clGrey,nobold]"
 # set -g window-status-current-format "#[fg=$clGrey,bg=$clA]🙼#[fg=$clTxt,bg=$clA] #[fg=clTxt,bold]#T #[fg=$clA,bg=$clGrey,nobold]🙼"
@@ -141,9 +141,9 @@ set -g allow-rename off
 set -g automatic-rename off
 
 # add system load to tmux powerline
-set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2)#[default]"
+set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2 | sed 's/colour72/black/g')#[default]"
+#set -g status-right "#[fg=yellow,attrs=bold]#P #[fg=yellow,bg=green]#(tmux-mem-cpu-load --colors --interval 2 -g 8)#[default]"
 #set -g status-right 60
-
 
 # VIM support
 set -sg escape-time 0
