--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -141,7 +141,8 @@ set -g allow-rename off
 set -g automatic-rename off
 
 # add system load to tmux powerline
-set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2 | sed 's/colour72/black/g')#[default]"
+#set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2 | sed 's/colour72/black/g' | sed 's/colour88/black/g')#[default]"
+set -g status-right "#[fg=brightwhite,bg=black]#(tmux-mem-cpu-load  --interval 2 )#[default]"
 #set -g status-right "#[fg=yellow,attrs=bold]#P #[fg=yellow,bg=green]#(tmux-mem-cpu-load --colors --interval 2 -g 8)#[default]"
 #set -g status-right 60
 
