updated doto config

--- a/doto.conf
+++ b/doto.conf
@@ -56,7 +56,8 @@
         "git_opts" : [
         ],
         "install_path" : "/.enhancd_new",
-        "install_cmd" : ""
+        "install_cmds" : [
+        ]
       },
       {
         "name" : "autojump",
@@ -64,7 +65,11 @@
         "git_opts" : [
         ],
         "install_path" : "/test/autojump",
-        "install_cmd" : "./install.py"
+        "install_cmds" : [
+          {
+            "cmd" : "./install.py"
+          }
+        ]
       },
       {
         "name" : "powerline",
@@ -72,7 +77,11 @@
         "git_opts" : [
         ],
         "install_path" : "/test/powerline",
-        "install_cmd" : "./setup install"
+        "install_cmds" : [
+          { "cmd" : "pip",
+            "args" : ["install", "--user", "git+git://github.com/powerline/powerline"]
+          }
+        ]
       },
       {
         "name" : "fasd",
@@ -80,7 +89,12 @@
         "git_opts" : [
         ],
         "install_path" : "/test/fasd",
-        "install_cmd" : "PREFIX=$HOME make install"
+        "install_cmds" : [
+          { "env" : { "PREFIX" : "$HOME" },
+            "cmd" : "make",
+            "args" : ["install"]
+          }
+        ]
       },
       {
         "name" : "zgen",
@@ -88,7 +102,8 @@
         "git_opts" : [
         ],
         "install_path" : "/test/zgen",
-        "install_cmd" : ""
+        "install_cmds" : [
+        ]
       },
       {
         "name" : "tmux-mem-cpu-load",
@@ -96,7 +111,15 @@
         "git_opts" : [
         ],
         "install_path" : "/test/tmux-mem-cpu-load",
-        "install_cmd" : "cmake .;PREFIX=$HOME make install"
+        "install_cmds" : [
+          { "cmd" : "cmake",
+            "args" : ["-DCMAKE_INSTALL_PREFIX:PATH=$HOME", "."]
+          },
+          { "env" : { "PREFIX" : "$HOME" },
+            "cmd" : "make",
+            "args" : ["install"]
+          }
+        ]
       },
       {
         "name" : "fzf",
@@ -105,7 +128,11 @@
           {"--depth" : "1"}
         ],
         "install_path" : "/.fzf2",
-        "install_cmd" : "~/.fzf/intsall"
+        "install_cmds" : [
+          { 
+            "cmd" : "~/.fzf/install"
+          }
+        ]
       }
     ],
   "setup_cmds" : [
