added powerline folder linking to doto conf

--- a/doto.conf
+++ b/doto.conf
@@ -47,6 +47,12 @@
         "src_path" : "fonts",
         "tar_path" : "fonts",
         "hidden"   : "True"
+      },
+      {
+        "name" : "powerline",
+        "src_path" : "powerline",
+        "tar_path" : "/config/powerline",
+        "hidden"   : "True"
       }
     ],
   "programs" : [
