fixed powerline config path

--- a/doto.conf
+++ b/doto.conf
@@ -51,7 +51,7 @@
       {
         "name" : "powerline",
         "src_path" : "powerline",
-        "tar_path" : "/config/powerline",
+        "tar_path" : "config/powerline",
         "hidden"   : "True"
       }
     ],
