added uninstall support for programs

--- a/doto.conf
+++ b/doto.conf
@@ -63,6 +63,8 @@
         ],
         "install_path" : "/.enhancd_new",
         "install_cmds" : [
+        ],
+        "uninstall_cmds" : [
         ]
       },
       {
@@ -75,7 +77,10 @@
           {
             "cmd" : "./install.py"
           }
+        ],
+        "uninstall_cmds" : [
         ]
+
       },
       {
         "name" : "powerline",
@@ -87,7 +92,10 @@
           { "cmd" : "pip",
             "args" : ["install", "--user", "git+git://github.com/powerline/powerline"]
           }
+        ],
+        "uninstall_cmds" : [
         ]
+
       },
       {
         "name" : "fasd",
@@ -100,7 +108,10 @@
             "cmd" : "make",
             "args" : ["install"]
           }
+        ],
+        "uninstall_cmds" : [
         ]
+
       },
       {
         "name" : "zgen",
@@ -109,7 +120,10 @@
         ],
         "install_path" : "/test/zgen",
         "install_cmds" : [
+        ],
+        "uninstall_cmds" : [
         ]
+
       },
       {
         "name" : "tmux-mem-cpu-load",
@@ -125,7 +139,10 @@
             "cmd" : "make",
             "args" : ["install"]
           }
+        ],
+        "uninstall_cmds" : [
         ]
+
       },
       {
         "name" : "fzf",
@@ -138,7 +155,10 @@
           {
             "cmd" : "~/.fzf/install"
           }
+        ],
+        "uninstall_cmds" : [
         ]
+
       }
     ],
   "setup_cmds" : [
