fixed left/right step in term for tmux

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -149,3 +149,4 @@ set -g status-right "#[fg=brightwhite,bg=grey0]#(tmux-mem-cpu-load  --interval 2
 # VIM support
 set -sg escape-time 0
 set -g aggressive-resize on
+setw -g xterm-keys on
