--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -11,7 +11,8 @@ bind-key C-a last-window
 bind C-c run "tmux show-buffer | xclip -i -selection clipboard"
 bind C-v run "tmux set-buffer -- \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
 bind b splitw -h \; splitw -v \; selectp -t 0 \; splitw -v \; selectp -t 0
-bind k kill-window
+unbind k
+#bind k kill-window
 # bind-key C-a select-pane -l
 # set-option -g mouse-select-pane on
 set-option -g status-keys vi
