--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -94,7 +94,7 @@ set-option -g message-bg $clOrg
 
 # setw -g mode-bg black
 
-setw -g window-status-bg black
+#setw -g window-status-bg black
 setw -g window-status-current-fg green
 # setw -g window-status-alert-attr default
 # setw -g window-status-alert-fg yellow
