--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -108,12 +108,11 @@ set -g @sidebar-tree-position 'left'
 # set -g @resurrect-processes 'ssh psql mysql sqlite3'
 
 set -g @tpm_plugins '				\
+  tmux-plugins/tpm					\
   tmux-plugins/tmux-copycat			\
-  tmux-plugins/tmux-resurrect		\
   tmux-plugins/tmux-sensible		\
   tmux-plugins/tmux-sidebar			\
   tmux-plugins/tmux-yank			\
-  tmux-plugins/tpm					\
   jbnicolai/tmux-fpp				\
 '
 run-shell '/home/vulder/.tmux/plugins/tpm/tpm'
@@ -138,8 +137,11 @@ bind -n M-down new-window
 #bind -n M-left prev
 #bind -n M-right next
 
-set -g allow-rename off
-set -g automatic-rename off
+set -g allow-rename on
+set -g automatic-rename on
+
+set -g base-index 1
+setw -g pane-base-index 1
 
 # add system load to tmux powerline
 #set -g status-right "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors --interval 2 | sed 's/colour72/black/g' | sed 's/colour88/black/g')#[default]"
