git ignoring tmux sidebar

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ tmux/tmux_folder/plugins/tmux-yank/
 vim/vim_dir/bundle/jedi-vim/
 vim/vim_dir/doc/jedi-vim.txt
 vim/vim_dir/plugin/jedi.vim
+tmux/tmux_folder/sidebar
