removed vim netrwhist file

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ vim/vim_dir/bundle/jedi-vim/
 vim/vim_dir/doc/jedi-vim.txt
 vim/vim_dir/plugin/jedi.vim
 tmux/tmux_folder/sidebar
+vim/vim_dir/.netrwhist
