updating setup script and doto conf to use correct urls

--- a/doto.conf
+++ b/doto.conf
@@ -58,7 +58,7 @@
   "programs" : [
       {
         "name" : "enhanced",
-        "git_url" : "git@github.com:b4b4r07/enhancd.git",
+        "git_url" : "https://github.com/b4b4r07/enhancd.git",
         "git_opts" : [
         ],
         "install_path" : "/.enhancd_new",
@@ -84,7 +84,7 @@
       },
       {
         "name" : "powerline",
-        "git_url" : "git@github.com:powerline/powerline.git",
+        "git_url" : "https://github.com/powerline/powerline.git",
         "git_opts" : [
         ],
         "install_path" : "/test/powerline",
@@ -99,7 +99,7 @@
       },
       {
         "name" : "fasd",
-        "git_url" : "git@github.com:clvv/fasd.git",
+        "git_url" : "https://github.com/clvv/fasd.git",
         "git_opts" : [
         ],
         "install_path" : "/test/fasd",
@@ -115,10 +115,10 @@
       },
       {
         "name" : "zgen",
-        "git_url" : "git@github.com:tarjoilija/zgen.git",
+        "git_url" : "https://github.com/tarjoilija/zgen.git",
         "git_opts" : [
         ],
-        "install_path" : "/test/zgen",
+        "install_path" : "/.zgen",
         "install_cmds" : [
         ],
         "uninstall_cmds" : [
@@ -127,7 +127,7 @@
       },
       {
         "name" : "tmux-mem-cpu-load",
-        "git_url" : "git@github.com:thewtex/tmux-mem-cpu-load.git",
+        "git_url" : "https://github.com/thewtex/tmux-mem-cpu-load.git",
         "git_opts" : [
         ],
         "install_path" : "/test/tmux-mem-cpu-load",
@@ -150,7 +150,7 @@
         "git_opts" : [
           {"--depth" : "1"}
         ],
-        "install_path" : "/.fzf2",
+        "install_path" : "/.fzf",
         "install_cmds" : [
           {
             "cmd" : "~/.fzf/install"
