updated paths to new src folder loction owned by doto

--- a/doto.conf
+++ b/doto.conf
@@ -61,7 +61,7 @@
         "git_url" : "https://github.com/b4b4r07/enhancd.git",
         "git_opts" : [
         ],
-        "install_path" : "/.enhancd_new",
+        "install_path" : "/.doto_src/enhancd",
         "install_cmds" : [
         ],
         "uninstall_cmds" : [
@@ -72,7 +72,7 @@
         "git_url" : "git://github.com/joelthelion/autojump.git",
         "git_opts" : [
         ],
-        "install_path" : "/test/autojump",
+        "install_path" : "/.doto_src/autojump",
         "install_cmds" : [
           {
             "cmd" : "./install.py"
@@ -87,7 +87,7 @@
         "git_url" : "https://github.com/powerline/powerline.git",
         "git_opts" : [
         ],
-        "install_path" : "/test/powerline",
+        "install_path" : "/.doto_src/powerline",
         "install_cmds" : [
           { "cmd" : "pip",
             "args" : ["install", "--user", "git+git://github.com/powerline/powerline"]
@@ -102,7 +102,7 @@
         "git_url" : "https://github.com/clvv/fasd.git",
         "git_opts" : [
         ],
-        "install_path" : "/test/fasd",
+        "install_path" : "/.doto_src/fasd",
         "install_cmds" : [
           { "env" : { "PREFIX" : "$HOME" },
             "cmd" : "make",
@@ -130,7 +130,7 @@
         "git_url" : "https://github.com/thewtex/tmux-mem-cpu-load.git",
         "git_opts" : [
         ],
-        "install_path" : "/test/tmux-mem-cpu-load",
+        "install_path" : "/.doto_src/tmux-mem-cpu-load",
         "install_cmds" : [
           { "cmd" : "cmake",
             "args" : ["-DCMAKE_INSTALL_PREFIX:PATH=$HOME", "."]
