adding tmuxinator to doto conf

--- a/doto.conf
+++ b/doto.conf
@@ -53,6 +53,12 @@
         "src_path" : "powerline",
         "tar_path" : "config/powerline",
         "hidden"   : "True"
+      },
+      {
+        "name" : "tmuxinator",
+        "src_path" : "tmuxinator/tmuxinator.zsh",
+        "tar_path" : "tmuxinator.zsh",
+        "hidden"   : "True"
       }
     ],
   "programs" : [
@@ -154,6 +160,20 @@
         "install_cmds" : [
           {
             "cmd" : "~/.fzf/install"
+          }
+        ],
+        "uninstall_cmds" : [
+        ]
+
+      },
+      {
+        "name" : "tmuxinator",
+        "git_url" : "",
+        "git_opts" : [],
+        "install_path" : "",
+        "install_cmds" : [
+          {
+            "cmd" : "gem install tmuxinator"
           }
         ],
         "uninstall_cmds" : [
