added gem as dependency and fixed tmuxinator install cmd

--- a/doto.conf
+++ b/doto.conf
@@ -173,7 +173,8 @@
         "install_path" : "",
         "install_cmds" : [
           {
-            "cmd" : "gem install tmuxinator"
+            "cmd" : "gem",
+            "args" : ["install", "tmuxinator"]
           }
         ],
         "uninstall_cmds" : [
@@ -189,6 +190,7 @@
     }
   ],
   "requirements" : [
-    { "name" : "cmake"}
+    { "name" : "cmake"},
+    { "name" : "gem"}
   ]
 }
