installing tmuxinator with gem to user home dir

--- a/doto.conf
+++ b/doto.conf
@@ -174,7 +174,7 @@
         "install_cmds" : [
           {
             "cmd" : "gem",
-            "args" : ["install", "tmuxinator"]
+            "args" : ["install", "--user-install", "tmuxinator"]
           }
         ],
         "uninstall_cmds" : [
