Added running of final setup commands

--- a/doto.conf
+++ b/doto.conf
@@ -184,9 +184,14 @@
     ],
   "setup_cmds" : [
     {
-      "name" : "",
-      "desc" : "",
-      "cmd"  : ""
+      "name" : "plug install",
+      "desc" : "Install vim plugins via Plug",
+      "cmds" : [
+        {
+          "cmd"  : "/bin/bash",
+          "args" : ["-c", "\"vi -c 'PlugUpdate | qa'\""]
+        }
+      ]
     }
   ],
   "requirements" : [
