fixed issues with plug install

--- a/doto.conf
+++ b/doto.conf
@@ -188,8 +188,8 @@
       "desc" : "Install vim plugins via Plug",
       "cmds" : [
         {
-          "cmd"  : "/bin/bash",
-          "args" : ["-c", "\"vi -c 'PlugUpdate | qa'\""]
+          "cmd"  : "vi",
+          "args" : ["-e", "-c", "\"PlugInstall | qa\""]
         }
       ]
     }
