--- a/doto.conf
+++ b/doto.conf
@@ -189,7 +189,7 @@
       "cmds" : [
         {
           "cmd"  : "vi",
-          "args" : ["-e", "-c", "\"PlugInstall | qa\""]
+          "args" : ["-f", "-E", "-c", "PlugInstall", "-c", "qa"]
         }
       ]
     }
