--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -99,7 +99,7 @@ setw -g window-status-current-fg green
 # setw -g window-status-alert-attr default
 # setw -g window-status-alert-fg yellow
 
-set -g history-limit 4096
+set -g history-limit 8192
 
 # set -g @sidebar-tree-command 'ls -1'
 set -g @sidebar-tree-command 'tree -C'
@@ -111,9 +111,7 @@ set -g @tpm_plugins '				\
   tmux-plugins/tpm					\
   tmux-plugins/tmux-copycat			\
   tmux-plugins/tmux-sensible		\
-  tmux-plugins/tmux-sidebar			\
   tmux-plugins/tmux-yank			\
-  jbnicolai/tmux-fpp				\
 '
 run-shell '/home/vulder/.tmux/plugins/tpm/tpm'
 
@@ -141,6 +139,7 @@ set -g allow-rename on
 set -g automatic-rename on
 
 set -g base-index 1
+set-option -g base-index 1
 setw -g pane-base-index 1
 
 # add system load to tmux powerline
