--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -150,5 +150,6 @@ set -g status-right "#[fg=brightwhite,bg=grey0]#(tmux-mem-cpu-load  --interval 2
 
 # VIM support
 set -sg escape-time 0
-set -g aggressive-resize on
+# set -g aggressive-resize on
+set-window-option -g aggressive-resize
 setw -g xterm-keys on
