Remove old tmux option syntax

--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -33,9 +33,9 @@ bind-key a send-prefix
 
 # Enable vi mode and v(isual) and y(ank) mode.
 set-window-option -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'V' rectangle-toggle
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'V' rectangle-toggle
 
 # set -g mode-mouse on	# Enable mouse scrolling
 # setw -g mouse-select-window on
@@ -59,8 +59,8 @@ clOrg='colour208'	# brightestorange
 # clA='colour121'	# yellow
 clA='colour214'	# orange
 # clABrd='colour186'	# yellow
-clABrd='colour214'	# orange
-$clXXX='colour46'	# orange
+clABrd='colour214' # orange
+#$clXXX='colour46'	# orange
 # clABrd='colour38'	# cyan
 # clABrd='colour121'	# turkis
 # clA='colour117'	# cyan
@@ -84,18 +84,23 @@ set-option -g status-interval 2
 # set -g window-status-format "#[fg=white] #W "
 set -g window-status-separator " "
 
-set-option -g pane-border-fg $clGrey
-set-option -g pane-border-bg black
-set-option -g pane-active-border-bg black
-set-option -g pane-active-border-fg $clABrd
+set-window-option -g pane-border-style fg=$clGrey,bg=black
+#set-option -g pane-border-fg $clGrey
+#set-option -g pane-border-bg black
 
-set-option -g message-fg black
-set-option -g message-bg $clOrg
+set-window-option -g pane-active-border-style fg=$clABrd,bg=black
+#set-option -g pane-active-border-bg black
+#set-option -g pane-active-border-fg $clABrd
+
+set-option -g message-style fg=black,bg=$clOrg
+#set-option -g message-fg black
+#set-option -g message-bg $clOrg
 
 # setw -g mode-bg black
 
 #setw -g window-status-bg black
-setw -g window-status-current-fg green
+#setw -g window-status-current-fg green
+set-window-option -g window-status-current-style fg=green
 # setw -g window-status-alert-attr default
 # setw -g window-status-alert-fg yellow
 
@@ -135,8 +140,8 @@ bind -n M-down new-window
 #bind -n M-left prev
 #bind -n M-right next
 
-set -g allow-rename on
-set -g automatic-rename on
+set -g allow-rename off
+# set -g automatic-rename on
 
 set -g base-index 1
 set-option -g base-index 1
