--- a/tmuxinator/vara-uni.yml
+++ b/tmuxinator/vara-uni.yml
@@ -8,7 +8,8 @@ root: ~
 
 # Runs before everything. Use it to start daemons etc.
 # pre: sudo /etc/rc.d/mysqld start
-pre: cd /home/vulder/git/llvm
+
+on_project_start: cd /home/vulder/git/llvm
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 # pre_window: rbenv shell 2.0.0-p247
