fixes powerline install python version

--- a/doto.conf
+++ b/doto.conf
@@ -95,7 +95,7 @@
         ],
         "install_path" : "/.doto_src/powerline",
         "install_cmds" : [
-          { "cmd" : "pip",
+          { "cmd" : "pip3",
             "args" : ["install", "--user", "git+git://github.com/powerline/powerline"]
           }
         ],
