--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -1,3 +1,4 @@
+set-option -g default-shell /bin/zsh
 run-shell "powerline-daemon -q"
 #source /root/.local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf
 source /home/vulder/.doto_src/powerline/powerline/bindings/tmux/powerline.conf
