Switches default terminal to alacritty

--- a/doto.conf
+++ b/doto.conf
@@ -59,7 +59,13 @@
         "src_path" : "tmuxinator/tmuxinator.zsh",
         "tar_path" : "tmuxinator.zsh",
         "hidden"   : "True"
-      }
+      },
+      {
+        "name" : "alacritty",
+        "src_path" : "alacritty/alacritty.yml",
+        "tar_path" : "alacritty.yml",
+        "hidden"   : "True"
+      },
     ],
   "programs" : [
       {
