Update doto conf with xinitrc and awesome

--- a/doto.conf
+++ b/doto.conf
@@ -66,6 +66,35 @@
         "tar_path" : "alacritty.yml",
         "hidden"   : "True"
       },
+        "name" : "xinitrc",
+        "src_path" : "xorg/xinitrc",
+        "tar_path" : "xinitrc",
+        "hidden"   : "True"
+      },
+      {
+        "name" : "awesome-lain",
+        "src_path" : "awesome/lain",
+        "tar_path" : ".config/awesome/lain",
+        "hidden"   : "False"
+      },
+      {
+        "name" : "awesome-freedesktop",
+        "src_path" : "awesome/freedesktop/freedesktop",
+        "tar_path" : ".config/awesome/freedesktop",
+        "hidden"   : "False"
+      },
+      {
+        "name" : "awesome-themes",
+        "src_path" : "awesome/themes",
+        "tar_path" : ".config/awesome/themes",
+        "hidden"   : "False"
+      },
+      {
+        "name" : "awesome-rc",
+        "src_path" : "awesome/rc_4.2.lua",
+        "tar_path" : ".config/awesome/rc.lua",
+        "hidden"   : "False"
+      },
     ],
   "programs" : [
       {
@@ -180,7 +209,7 @@
         "install_cmds" : [
           {
             "cmd" : "gem",
-            "args" : ["install", "--user-install", "tmuxinator"]
+            "args" : ["install", "tmuxinator"]
           }
         ],
         "uninstall_cmds" : [
