Example gentoo install

--- a/configure_system/gentoo.yml
+++ b/configure_system/gentoo.yml
@@ -2,3 +2,10 @@
 - name: "Gentoo hello"
   debug:
     msg: Hello gentoo
+- name: "Install required packages"
+  portage:
+    package:
+      - app-editors/vim
+      - app-vim/vimtex
+    state: present
+  become: yes
