--- a/configure_system/main.yml
+++ b/configure_system/main.yml
@@ -24,4 +24,4 @@
     - include_tasks: gentoo.yml
       when: ansible_os_family == "Gentoo"
     - include_tasks: debian.yml
-      when: ansible_os_family == "Debian"
+      when: ansible_os_family == "Debian"  # TODO: needs also ubuntu
