--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "awesome/lain"]
-	path = awesome/lain
-	url = git@github.com:lcpz/lain.git
+  path = awesome/lain
+  url = https://github.com/lcpz/lain.git
 [submodule "awesome/freedesktop"]
-	path = awesome/freedesktop
-	url = git@github.com:lcpz/awesome-copycats.git
+  path = awesome/freedesktop
+  url = https://github.com/lcpz/awesome-copycats.git
 [submodule "vim/vim_dir/UltiSnips"]
-	path = vim/vim_dir/UltiSnips
-	url = https://github.com/vulder/UltiSnips-llvm.git
+  path = vim/vim_dir/UltiSnips
+  url = https://github.com/vulder/UltiSnips-llvm.git
 [submodule "tmux/tmux_folder/plugins/tpm"]
-	path = tmux/tmux_folder/plugins/tpm
-	url = https://github.com/tmux-plugins/tpm
+  path = tmux/tmux_folder/plugins/tpm
+  url = https://github.com/tmux-plugins/tpm
