--- a/configure_system/main.yml
+++ b/configure_system/main.yml
@@ -61,6 +61,12 @@
       file:
         path: ~/.doto_src
         state: directory
+    - name: Setting up enhancd repository
+      git:
+        repo: "https://github.com/b4b4r07/enhancd.git"
+        dest: ~/.doto_src/enhancd
+        depth: 1
+        accept_hostkey: yes
     - name: Setting up fasd repository
       git:
         repo: "https://github.com/clvv/fasd.git"
