--- a/configure_system/debian.yml
+++ b/configure_system/debian.yml
@@ -16,5 +16,7 @@
       - silversearcher-ag
       # - sys-apps/exa TODO: fix by manual install
       - fzf
+      # command dependencies
+      - python3-pip
     state: present
   become: yes
