--- a/tmux/tmux_main.conf
+++ b/tmux/tmux_main.conf
@@ -1,7 +1,7 @@
 set-option -g default-shell /bin/zsh
 run-shell "powerline-daemon -q"
 #source /root/.local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf
-source /home/vulder/.doto_src/powerline/powerline/bindings/tmux/powerline.conf
+source /home/{{ user }}/.doto_src/powerline/powerline/bindings/tmux/powerline.conf
 unbind C-a
 unbind C-b
 set -g prefix C-a
@@ -119,7 +119,7 @@ set -g @tpm_plugins '				\
   tmux-plugins/tmux-sensible		\
   tmux-plugins/tmux-yank			\
 '
-run-shell '/home/vulder/.tmux/plugins/tpm/tpm'
+run-shell '/home/{{ user }}/.tmux/plugins/tpm/tpm'
 
 # bind b split-window "tmux lsw | percol --initial-index $(tmux lsw | awk '/active.$/ {print NR-1}') | cut -d':' -f 1 | tr -d '\n' | xargs -0 tmux select-window -t"
 # bind B split-window "tmux ls | percol --initial-index $(tmux ls | awk \"/^$(tmux display-message -p '#{session_name}'):/ {print NR-1}\") | cut -d':' -f 1 | tr -d '\n' | xargs -0 tmux switch-client -t"
